<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_layout"
    tools:context=".addpaitentActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D3D3D3"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paitentDetails"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginBottom="@dimen/margin15dp"
                ></TextView>

            <EditText
                android:id="@+id/edit_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullName"
                android:layout_marginBottom="@dimen/margin15dp"
                android:padding="12dp"
                android:drawablePadding="16dp"
                android:background="@android:drawable/editbox_background"
                ></EditText>

            <EditText
                android:id="@+id/edit_contactnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contactNo"
                android:layout_marginBottom="@dimen/margin15dp"
                android:padding="12dp"
                android:drawablePadding="16dp"
                android:background="@android:drawable/editbox_background"
                ></EditText>

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EmailAddress"
                android:layout_marginBottom="@dimen/margin15dp"
                android:padding="12dp"
                android:drawablePadding="16dp"
                android:background="@android:drawable/editbox_background"
                ></EditText>

            <Spinner
                android:id="@+id/edit_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin15dp"
                android:padding="12dp"
                android:drawablePadding="16dp"
                android:spinnerMode="dropdown"
                android:background="@android:drawable/editbox_background"
                >

            </Spinner>

            <com.example.hardyapplicationtest.utils.DatePickerEditText
                android:id="@+id/edit_dob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Date of Birth"
                android:drawableRight="@drawable/calendar"
                android:textSize="13dp"
                android:layout_marginBottom="@dimen/margin15dp"
                android:padding="12dp"
                android:drawablePadding="16dp"
                android:background="@android:drawable/editbox_background"
                >
            </com.example.hardyapplicationtest.utils.DatePickerEditText>

            <EditText
                android:id="@+id/edit_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Weight"
                android:layout_marginBottom="@dimen/margin15dp"
                android:padding="12dp"
                android:drawablePadding="16dp"
                android:background="@android:drawable/editbox_background"
                ></EditText>
            
            <TextView
                android:id="@+id/edit_DiseaseList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Disease_title"
                android:layout_marginBottom="@dimen/margin15dp"
                android:padding="12dp"
                android:textSize="18dp"
                android:drawablePadding="18dp"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:background="@android:drawable/editbox_background"></TextView>

            <LinearLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/capture_Image"
                    android:layout_gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/capture_image"></ImageView>

                <Button
                    android:id="@+id/btnAttachImage"
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:text="Attach Image" />

            </LinearLayout>


            <Button
                android:id="@+id/btnSave"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:text="Save" />

        </LinearLayout>




    </androidx.core.widget.NestedScrollView>

</LinearLayout>